--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,11 @@ body{
 
 .animation-pop-up{
     animation-name: pop-up-alert;
-        animation-duration: 3s;
+    animation-duration: 3s;
+}
+.animation-pop-up-form{
+    animation-name: pop-up-form-alert;
+    animation-duration: 0.5s;
 }
 .animation-content{
     animation-name: content;
@@ -75,6 +79,15 @@ body{
     }
     100%{
         top:-150px;
+    }
+}
+@keyframes pop-up-form-alert{
+    from{
+        top:0;
+        opacity: 0;
+    }
+    100%{
+        top:150px;
     }
 }
 @keyframes content{
@@ -104,6 +117,24 @@ body{
     background-color: rgb(44, 44, 44);
     }
 }
+
+
+
+@media screen and (min-width: 1001px) {
+    .m-center{
+        margin: 8em auto;
+    }
+}
+@media screen and (max-width: 1000px) {
+    .m-center{
+        margin: 10em auto;
+    }
+}
+
+.p-vertical{
+    padding:15px 0;
+}
+
 
 
 /*
@@ -155,6 +186,12 @@ a:hover{
     text-decoration:underline;
     color:white;
     }
+form{
+    margin:0 0 15px 0;
+}
+button{
+    margin:0 0 15px 0;
+}
 
 
 
@@ -187,6 +224,9 @@ a:hover{
     text-align: center;
     }
     form{
+    text-align: center;
+    }
+    .center{
     text-align: center;
     }
 }
@@ -278,6 +318,20 @@ input[type=button]:hover {
     cursor:pointer;
 	color:black;
 	}
+button{
+    height:30px;
+    font-size:15px;
+    background-color:transparent;
+    color:white;
+    border: solid;
+    border-color: white;
+    border-width: 1px;
+    }
+button:hover {
+    background-color:white;
+    cursor:pointer;
+    color:black;
+    }
 input[type=submit] {
 	height:30px;
 	font-size:15px;
@@ -484,10 +538,11 @@ a:hover .burger.opened span{
 header{
  	padding: 2px 0;
  	text-align: center;
-    background-color: rgba(121, 121, 121, 0.7);
+    background-color: rgba(182, 182, 182);
     }
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
     header{
+    background-color: rgba(182, 182, 182, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     }
@@ -506,7 +561,7 @@ header{
     padding:25px 35px;
     text-align: center;
     width: 750px;
-    background-color: rgba(172, 172, 172, 0.7);
+    background-color: rgba(182, 182, 182);
     box-shadow: 2px 2px 2px rgb(31, 31, 31);
     }
     }
@@ -515,12 +570,13 @@ header{
     padding:35px 25px;
     text-align: center;
     width: 100%;
-    background-color: rgba(172, 172, 172, 0.7);
+    background-color: rgba(182, 182, 182);
     box-shadow: 2px 2px 2px rgb(31, 31, 31);
     }
     }
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
     .form{
+    background-color: rgba(182, 182, 182, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     }
@@ -686,11 +742,12 @@ text-align:center;
 display: inline-block;
 vertical-align: middle;
 transition:all 0.3s;
-background-color: rgba(172, 172, 172, 0.7);
+background-color: rgba(182, 182, 182);
 box-shadow: 2px 2px 2px rgb(31, 31, 31);
 }
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
     .app{
+    background-color: rgba(182, 182, 182, 0.8);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     }
@@ -708,14 +765,27 @@ box-shadow: 2px 2px 2px rgb(31, 31, 31);
 */
 
 .pop-up-container{
-    position: absolute;
     z-index: 101;
+    position: absolute;
     width: 100%;
     opacity: 0;
     top:-150px;
 }
+.pop-up-container-form{
+    z-index: 101;
+    position: absolute;
+    width: 100%;
+    top:150px;
+}
 .pop-up-element{
     padding:18px;
+    }
+.pop-up-element-form{
+    margin: 0 auto;
+    width:180px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     }
 @media screen and (min-width: 1001px) {
     .pop-up{
@@ -723,7 +793,15 @@ box-shadow: 2px 2px 2px rgb(31, 31, 31);
     padding:25px 35px;
     text-align: center;
     width: 750px;
-    background-color: rgb(172, 172, 172);
+    background-color: rgba(182, 182, 182);
+    box-shadow: 2px 2px 2px rgb(31, 31, 31);
+    }
+    .pop-up-form{
+    margin: 0 auto;
+    padding:25px 35px;
+    text-align: center;
+    width: 550px;
+    background-color: rgba(182, 182, 182);
     box-shadow: 2px 2px 2px rgb(31, 31, 31);
     }
     }
@@ -733,7 +811,15 @@ box-shadow: 2px 2px 2px rgb(31, 31, 31);
     padding:35px 25px;
     text-align: center;
     width: 87%;
-    background-color: rgb(172, 172, 172);
+    background-color: rgba(182, 182, 182);
+    box-shadow: 2px 2px 2px rgb(31, 31, 31);
+    }
+    .pop-up-form{
+    margin: 0 auto;
+    padding:35px 25px;
+    text-align: center;
+    width: 84%;
+    background-color: rgba(182, 182, 182);
     box-shadow: 2px 2px 2px rgb(31, 31, 31);
     }
     }
